# wordcount

./: README.md  pyproject.toml
resources/: content.txt
wordcount/: counter.py
wordcount/tests/: test_counter.py
